# codama-demo-2025-08

1-from-scratch/: package.json
1-from-scratch/clients/js/: package.json  pnpm-lock.yaml
1-from-scratch/clients/rust/: Cargo.toml
2-from-anchor/: package.json
2-from-anchor/clients/js/: package.json
2-from-anchor/clients/rust/: Cargo.toml
3-from-macros/: Cargo.toml  package.json
3-from-macros/clients/js/: package.json
3-from-macros/clients/rust/: Cargo.toml
3-from-macros/program/: Cargo.toml
3-from-macros/program/src/: errors.rs  instructions.rs  lib.rs  state.rs
